bug(delegates): fix color of the delegates tab on ios

--- a/src/pages/delegates/delegates.scss
+++ b/src/pages/delegates/delegates.scss
@@ -1,5 +1,5 @@
 page-delegates {
-  .segment-button {
+  .segment-md .segment-button {
     color: color($colors, dark, base)!important;
   }
 
